5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3987/executions/1671_1107.log
== TEST (2019-04-29 20:30:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
X = int(input("dia de hoje e: 0/1/2/3/4/5/6" ))
Y = int(input("dias futuros:"))

if(X < 0) or (X > 6):
	s = 7
elif((X + Y) < 7):
	s = X + Y
else:
	s = ((X + Y)%7)
	
if(s == 0):
	e = "domingo"
elif(s == 1):
	e = "segunda"
elif(s == 2):
	e = "terca"
elif(s == 3):
	e = "quarta"
elif(s == 4):
	e = "quinta"
elif(s == 5):
	e = "sexta"
elif(s == 6):
	e = "sabado"
else:
	e = "inexistente"
	
if(X == 0):
	dia = "domingo"
elif(X == 1):
	dia = "segunda"
elif(X == 2):
	dia = "terca"
elif(X == 3):
	dia = "quarta"
elif(X == 4):
	dia = "quinta"
elif(X == 5):
	dia = "sexta"
else:
	dia = "sabado"
	
if(X < 0) or (X > 6):
	print("A entrada", X, "eh invalida")
else:
	print("Hoje eh", dia, "e o dia futuro eh", e)
(X != 0) or (X != 1) or (X != 2) or (X != 3) or (X != 4) or (X != 5) or (X != 6):
	print("A entrada", X ,"eh invalida")
	if(X == 0):
		print("Hoje eh domingo" )
-- ERROR:
File "XXXX", line 50
    (X != 0) or (X != 1) or (X != 2) or (X != 3) or (X != 4) or (X != 5) or (X != 6):
                                                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 20:31:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
X = int(input("dia de hoje e: 0/1/2/3/4/5/6" ))
Y = int(input("dias futuros:"))

if(X < 0) or (X > 6):
	s = 7
elif((X + Y) < 7):
	s = X + Y
else:
	s = ((X + Y)%7)
	
if(s == 0):
	e = "domingo"
elif(s == 1):
	e = "segunda"
elif(s == 2):
	e = "terca"
elif(s == 3):
	e = "quarta"
elif(s == 4):
	e = "quinta"
elif(s == 5):
	e = "sexta"
elif(s == 6):
	e = "sabado"
else:
	e = "inexistente"
	
if(X == 0):
	dia = "domingo"
elif(X == 1):
	dia = "segunda"
elif(X == 2):
	dia = "terca"
elif(X == 3):
	dia = "quarta"
elif(X == 4):
	dia = "quinta"
elif(X == 5):
	dia = "sexta"
else:
	dia = "sabado"
	
if(X < 0) or (X > 6):
	print("A entrada", X, "eh invalida")
else:
	print("Hoje eh", dia, "e o dia futuro eh", e)

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 20:31:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
X = int(input("dia de hoje e: 0/1/2/3/4/5/6" ))
Y = int(input("dias futuros:"))

if(X < 0) or (X > 6):
	s = 7
elif((X + Y) < 7):
	s = X + Y
else:
	s = ((X + Y)%7)
	
if(s == 0):
	e = "domingo"
elif(s == 1):
	e = "segunda"
elif(s == 2):
	e = "terca"
elif(s == 3):
	e = "quarta"
elif(s == 4):
	e = "quinta"
elif(s == 5):
	e = "sexta"
elif(s == 6):
	e = "sabado"
else:
	e = "inexistente"
	
if(X == 0):
	dia = "domingo"
elif(X == 1):
	dia = "segunda"
elif(X == 2):
	dia = "terca"
elif(X == 3):
	dia = "quarta"
elif(X == 4):
	dia = "quinta"
elif(X == 5):
	dia = "sexta"
else:
	dia = "sabado"
	
if(X < 0) or (X > 6):
	print("A entrada", X, "eh invalida")
else:
	print("Hoje eh", dia, "e o dia futuro eh", e)

-- EXECUTION TIME:
0.230197
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
